ingress/simple-path-based/nginx-server.deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: nginx-server
  name: nginx
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx-server
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: nginx-server
    spec:
      containers:
      - image: nginx
        imagePullPolicy: Always
        name: nginx
      dnsPolicy: ClusterFirst
      restartPolicy: Always
