ingress/simple-path-based/nginx-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: nginx-service
  name: nginx-service
spec:
  ports:
  - name: http
    port: 8888
    protocol: TCP
    targetPort: 80
  selector:
    app: nginx-server
  type: ClusterIP
