ingress/simple-path-based/nginx.ingress.yaml
# middleware to strip out /webservice from the request url
# before it is sent to nginx. (nginx has no /webservice configured)
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: strip-url-path-prefix
  namespace: default
spec:
  stripPrefix:
    prefixes:
      - /webserver
---
# Ingress to expose nginx at homelab/webservice
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
  annotations:
    # the format is <namespace>-<middleware-name>@kubernetescrd
    traefik.ingress.kubernetes.io/router.middlewares: default-strip-url-path-prefix@kubernetescrd 
spec:
  rules:
  - host: homelab
    http:
      paths:
      - backend:
          service:
            name: nginx-service
            port:
              number: 8888
        path: /webserver
        pathType: Prefix
